# afptest

./: .gitignore  AUTHORS  COPYING  Makefile.am  README  aclocal.m4  autogen.sh  configure.ac  configure.in  libtool  ltconfig
macros/: Makefile.am  iconv.m4  largefile-check.m4
test/: .cvsignore  .gitignore  Error.c  FPAddAPPL.c  FPAddComment.c  FPAddIcon.c  FPByteRangeLock.c  FPByteRangeLockExt.c  FPCatSearch.c  FPCatSearchExt.c  FPCloseDT.c  FPCloseDir.c  FPCloseFork.c  FPCloseVol.c  FPCopyFile.c  FPCreateDir.c  FPCreateFile.c  FPDelete.c  FPDisconnectOldSession.c  FPEnumerate.c  FPEnumerateExt.c  FPEnumerateExt2.c  FPExchangeFiles.c  FPFlush.c  FPFlushFork.c  FPGetACL.c  FPGetAPPL.c  FPGetComment.c  FPGetFileDirParms.c  FPGetForkParms.c  FPGetIcon.c  FPGetIconInfo.c  FPGetSessionToken.c  FPGetSrvrInfo.c  FPGetSrvrMsg.c  FPGetSrvrParms.c  FPGetUserInfo.c  FPGetVolParms.c  FPMapID.c  FPMapName.  (+81 more)
test/data/: resource_fork_conversion_test
