AC_INIT(test/spectest.c)

AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE(afptest, ${AFPTEST_VERSION})
AM_CONFIG_HEADER(config.h)

AC_PROG_CC

AC_CHECK_HEADERS(fcntl.h strings.h sys/fcntl.h unistd.h sys/cdefs.h)

AM_PROG_LIBTOOL
AM_ICONV
AC_SYS_LARGEFILE

AC_CHECK_LIB(dl, dlopen)
AC_CHECK_LIB(nsl, main)
AC_CHECK_LIB(socket, socket)

AC_OUTPUT([Makefile
	macros/Makefile
	test/Makefile])

